--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <link href="//fonts.googleapis.com/css?family=Open+Sans:700,300,600,400" rel='stylesheet' type='text/css'>
     <link rel="icon" href="/assets/images/favicon.ico" type="image/x-icon">
 
-    <title>Octoblu - Internet of Everything!</title>
+    <title>Octoblu - Integration of Everything</title>
 
     <link href="/assets/stylesheets/dist/styles.css" rel="stylesheet" type="text/css"/>
 
