integration of more everythings

--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,8 @@
     <!-- META -->
     <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
     <meta content="text/html;charset=utf-8" http-equiv="content-type">
-    <meta name="description" content="Octoblu - Internet of Everything!">
-    <meta name="author" content="Octoblu">
+    <meta name="description" content="Octoblu - Integration of Everything">
+    <meta name="author" content="Octoblu, now part of Citrix">
     <meta name="theme-color" content="#14568f">
     <link href="//fonts.googleapis.com/css?family=Open+Sans:700,300,600,400" rel='stylesheet' type='text/css'>
     <link rel="icon" href="/assets/images/favicon.ico" type="image/x-icon">
