remove console.logs and searchable tags

--- a/public/pages/shared-bluprints.html
+++ b/public/pages/shared-bluprints.html
@@ -87,7 +87,7 @@
             </p>
 
             <div ng-show="bluprint.tags" class="tags">
-              <a href ng-repeat="tag in bluprint.tags" class="tag" ng-click="controller.searchByTag(tag)">{{tag}}</a>
+              <a href ng-repeat="tag in bluprint.tags" class="tag">{{tag}}</a>
             </div>
           </div>
           <div class="footer">
