remove help-block class from help text

--- a/public/pages/flow-node-editor.html
+++ b/public/pages/flow-node-editor.html
@@ -10,7 +10,7 @@
     </md-toolbar>
     <md-content>
       <form style="padding:20px;" layout="column">
-        <p class="help-block" ng-if="showHelp" marked="flowNodeType.helpText || 'No help is available for this node'">
+        <p ng-if="showHelp" marked="flowNodeType.helpText || 'No help is available for this node'">
         </p>
         <div class="flow-node-form" ng-include="flowNodeType.formTemplatePath"></div>
         <br>
