--- a/public/pages/shared-bluprints.html
+++ b/public/pages/shared-bluprints.html
@@ -4,7 +4,7 @@
       <a href class="menu-icon" ng-click="toggleNav()">
         <i class="fa fa-bars" ng-hide="isNavLockedOpen()"></i>
       </a>
-      Shared Blueprints
+      Shared Bluprints
     </div>
   </h2>
 </md-toolbar>
