--- a/public/pages/bluprints.html
+++ b/public/pages/bluprints.html
@@ -1,7 +1,7 @@
 <md-toolbar class="bluprints-toolbar">
   <div class="md-toolbar-tools">
     <a href class="menu-icon" ng-click="toggleNav()">
-      <h3 class="page-heading">
+      <h3 class="page-heading bluprint-header">
         <i class="fa fa-bars" ng-hide="isNavLockedOpen()"></i> Bluprints
       </h3>
     </a>
@@ -26,11 +26,11 @@
 
 <md-content class="bluprints-container" ng-hide="isLoading">
   <ul class="flows">
-    <li class="flow" ng-class="{'selected-bluprint': currentBluprint == bluprint }" ng-repeat="bluprint in bluprints | filter: {name:bluprintSearch}" ng-click="setcurrentBluprint(bluprint)">
-      <div ng-show="currentBluprint != bluprint" ng-include="'/pages/bluprint-list-item.html'">
+    <li class="flow" ng-class="{'selected-bluprint': selectedBluprint == bluprint }" ng-repeat="bluprint in bluprints | filter: {name:bluprintSearch}">
+      <div ng-show="!bluprint.expanded" ng-include="'/pages/bluprint-list-item.html'">
       </div>
 
-      <div ng-show="currentBluprint == bluprint" ng-include="'/pages/bluprint-editor.html'">
+      <div ng-show="bluprint.expanded" ng-include="'/pages/bluprint-editor.html'">
       </div>
     </li>
   </ul>
