--- a/public/pages/profile/new.html
+++ b/public/pages/profile/new.html
@@ -51,7 +51,7 @@
 
       </form>
 
-      <md-button ui-sref="terms" class="full__bleed auth__button--secondary" flex>View Terms of Service</md-button>
+      <md-button ui-sref="terms" class="full__bleed auth__button--secondary">View Terms of Service</md-button>
 
     </div>
   </div>
