fixed bluprint toggling, and removed debounce

--- a/public/pages/bluprint-list-item.html
+++ b/public/pages/bluprint-list-item.html
@@ -15,7 +15,7 @@
       {{bluprint.description || "No description available."}}
     </p>
 
-    <div class="tags" ng-click="selectBluprint(bluprint)">
+    <div class="tags">
       <a href="#" ng-repeat="tag in bluprint.tags" class="tag">{{tag}}</a>
     </div>
   </div>
