--- a/public/pages/node_forms/range_form.html
+++ b/public/pages/node_forms/range_form.html
@@ -17,5 +17,5 @@
 </md-input-container>
 
 <p class="text-info">
-  Reference incoming messages with <span ng-non-bindable>{{payload.value}}</span>
+  Reference incoming messages with <span ng-non-bindable>{{msg.value}}</span>
 </p>
