Started fine tuning the node wizard views

--- a/public/pages/node-wizard/add-channel/oauth.html
+++ b/public/pages/node-wizard/add-channel/oauth.html
@@ -1,9 +1,4 @@
-<div class="row">
-  <div class="col-xs-12 col-md-offset-3 col-md-6 text-center">
-    <h2>Activating this channel will redirect you to authorize with a third party.</h2>
-    <br>
-    <button type="button" ng-click="activate()" class="btn btn-lg btn-primary">
-      Activate Channel
-    </button>
-  </div>
-</div>
+<h2>Activating this channel will redirect you to authorize with a third party.</h2>
+<md-button ng-click="activate()" class="md-raised md-primary node-wizard__button">
+  Activate Channel
+</md-button>
