--- a/public/pages/connector/channels/detail.html
+++ b/public/pages/connector/channels/detail.html
@@ -8,41 +8,29 @@
   </h2>
 </md-toolbar>
 
-<br>
-
-<h2 class="text-center">Manage {{channel.name}}</h2>
-<br>
-
-
-<div class="row">
-  <div class="col-xs-12 col-md-offset-3 col-md-6 text-center">
-    <img src="{{channel.logo}}" class="device-logo">
-    <br>
-    <br>
-
-    <h2>Deactivating this channel will disable any flows using this channel.</h2>
-    <br>
-
-    <button class="btn btn-large btn-danger" ng-click="setDeactivate()">
-      Deactivate Channel
-    </button>
-  </div>
-</div>
-
-<br>
-<br>
-<br>
-<br>
-<br>
-
-
+<main class="node-wizard">
+  <h2 class="node-wizard__header">Manage {{channel.name}}</h2>
+  <img src="{{channel.logo}}" alt="{{channel.name}}" class="node-wizard__logo">
+  <p class="node-wizard__copy">
+    Deactivating this channel will disable any flows using this channel.
+  </p>
+  <md-button ng-click="setDeactivate($event)" class="md-raised md-hue-2 md-warn node-wizard__button">Deactivate Channel</md-button>
+</main>
 
 <script type="text/ng-template" id="myModalContent.html">
-  <div class="modal-body">
-    <h3>Delete your credentials for this API?</h3>
-  </div>
-  <div class="modal-footer">
-    <button class="btn btn-primary btn-sm" ng-click="ok()">OK</button>
-    <button class="btn btn-sm btn-link" ng-click="cancel()">Cancel</button>
-  </div>
+  <md-dialog aria-label="Delete Channel" class="node-wizard__dialog">
+    <div class="node-wizard__dialog-body">
+      <p>Are you sure want to deactivate this channel?</p>
+    </div>
+
+    <div class="md-actions node-wizard__dialog-actions">
+      <md-button class="md-primary" ng-click="respond('ok')">
+        Yes
+      </md-button>
+
+      <md-button class="md-primary" ng-click="respond('cancel')">
+        Cancel
+      </md-button>
+    </div>
+  </md-dialog>
 </script>
