--- a/public/pages/node-wizard/add-channel/noauth.html
+++ b/public/pages/node-wizard/add-channel/noauth.html
@@ -1,7 +1,3 @@
-<div class="row">
-  <div class="col-xs-12 col-md-offset-3 col-md-6 text-center">
-    <button type="button" ng-click="activate()" class="btn btn-lg btn-primary">
-      Activate Channel
-    </button>
-  </div>
-</div>
+<md-button ng-click="activate()" class="md-raised md-primary node-wizard__button">
+  Activate Channel
+</md-button>
