Update add channel forms to new style & markup

--- a/public/pages/node-wizard/add-channel/index.html
+++ b/public/pages/node-wizard/add-channel/index.html
@@ -1,5 +1,5 @@
 <main class="node-wizard">
-  <h2 class="node-wizard__header">Add {{nodeType.name}}</h2>
+  <h2 class="node-wizard__title">Add {{nodeType.name}}</h2>
   <img src="{{nodeType.logo}}" alt="{{nodeType.name}}" class="node-wizard__logo">
   <div ui-view class="node-wizard__body"></div>
 </main>
