--- a/public/pages/node-wizard/add-channel/default-options.html
+++ b/public/pages/node-wizard/add-channel/default-options.html
@@ -1,15 +1,11 @@
-<div class="row">
-  <div class="col-xs-12 col-md-offset-3 col-md-6">
-    <form class="form" ng-submit="saveDefaultParams()">
-    	<h4>Channel Configuration</h4>
-      <param-input ng-model="channelDefaultParams" param-definitions="channel.defaultParams"></param-input>
-      <p class="help-block" ng-if="errorMessage">{{errorMessage}}</p>
+<form class="node-wizard__form" ng-submit="saveDefaultParams()">
+	<h4>Channel Configuration</h4>
+  <param-input ng-model="channelDefaultParams" param-definitions="channel.defaultParams"></param-input>
+  <p class="help-block" ng-if="errorMessage">{{errorMessage}}</p>
 
-      <div class="form-group">
-        <button type="submit" class="btn btn-primary btn-lg btn-block">
-          Save Configuration
-        </button>
-      </div>
-    </form>
+  <div class="form-group">
+    <button type="submit" class="btn btn-primary btn-lg btn-block">
+      Save Configuration
+    </button>
   </div>
-</div>
+</form>
