--- a/public/pages/node-wizard/add-channel/simpleauthquery.html
+++ b/public/pages/node-wizard/add-channel/simpleauthquery.html
@@ -1,33 +1,29 @@
-<div class="row">
-  <div class="col-xs-12 col-md-offset-3 col-md-6">
-    <form class="form" ng-submit="activate()">
-      <div class="form-group" ng-class="{'has-error': errorMessage}">
-        <label for="userId" class="control-label">API Key</label>
-        <input type="text" ng-model="newChannel.userId" class="form-control input-lg" id="userId" required>
-        <p class="help-block" ng-if="errorMessage">{{errorMessage}}</p>
-      </div>
-      <div class="form-group" ng-class="{'has-error': errorMessage}">
-        <label for="password" class="control-label">Password</label>
-        <input type="password" ng-model="newChannel.password" class="form-control input-lg" id="password" required>
-        <p class="help-block" ng-if="errorMessage">{{errorMessage}}</p>
-      </div>
-      <div class="form-group" ng-class="{'has-error': errorMessage}">
-        <label for="domain" class="control-label">Domain</label>
-        <input type="text" ng-model="newChannel.domain" class="form-control input-lg" id="domain" required>
-        <p class="help-block" ng-if="errorMessage">{{errorMessage}}</p>
-      </div>
-      <div class="form-group" ng-class="{'has-error': errorMessage}">
-        <label for="appKey" class="control-label">App Key</label>
-        <input type="text" ng-model="newChannel.appKey" class="form-control input-lg" id="appKey" required>
-        <p class="help-block" ng-if="errorMessage">{{errorMessage}}</p>
-      </div>
-
-      <div class="form-group">
-        <button type="submit" class="btn btn-primary btn-lg btn-block">
-          <i class="fa fa-plus"></i>
-          Activate
-        </button>
-      </div>
-    </form>
+<form class="node-wizard__form" ng-submit="activate()">
+  <div class="form-group" ng-class="{'has-error': errorMessage}">
+    <label for="userId" class="control-label">API Key</label>
+    <input type="text" ng-model="newChannel.userId" class="form-control input-lg" id="userId" required>
+    <p class="help-block" ng-if="errorMessage">{{errorMessage}}</p>
   </div>
-</div>
+  <div class="form-group" ng-class="{'has-error': errorMessage}">
+    <label for="password" class="control-label">Password</label>
+    <input type="password" ng-model="newChannel.password" class="form-control input-lg" id="password" required>
+    <p class="help-block" ng-if="errorMessage">{{errorMessage}}</p>
+  </div>
+  <div class="form-group" ng-class="{'has-error': errorMessage}">
+    <label for="domain" class="control-label">Domain</label>
+    <input type="text" ng-model="newChannel.domain" class="form-control input-lg" id="domain" required>
+    <p class="help-block" ng-if="errorMessage">{{errorMessage}}</p>
+  </div>
+  <div class="form-group" ng-class="{'has-error': errorMessage}">
+    <label for="appKey" class="control-label">App Key</label>
+    <input type="text" ng-model="newChannel.appKey" class="form-control input-lg" id="appKey" required>
+    <p class="help-block" ng-if="errorMessage">{{errorMessage}}</p>
+  </div>
+
+  <div class="form-group">
+    <button type="submit" class="btn btn-primary btn-lg btn-block">
+      <i class="fa fa-plus"></i>
+      Activate
+    </button>
+  </div>
+</form>
