--- a/public/pages/node-wizard/add-channel/witai.html
+++ b/public/pages/node-wizard/add-channel/witai.html
@@ -1,18 +1,14 @@
-<div class="row">
-  <div class="col-xs-12 col-md-offset-3 col-md-6">
-    <form class="form" ng-submit="activate()">
-      <div class="form-group" ng-class="{'has-error': errorMessage}">
-        <label for="access_token" class="control-label">Access Token</label>
-        <input type="text" ng-model="newChannel.accessToken" class="form-control input-lg" id="access_token" required>
-        <p class="help-block" ng-if="errorMessage">{{errorMessage}}</p>
-      </div>
-
-      <div class="form-group">
-        <button type="submit" class="btn btn-primary btn-lg btn-block">
-          <i class="fa fa-plus"></i>
-          Activate
-        </button>
-      </div>
-    </form>
+<form class="node-wizard__form" ng-submit="activate()">
+  <div class="form-group" ng-class="{'has-error': errorMessage}">
+    <label for="access_token" class="control-label">Access Token</label>
+    <input type="text" ng-model="newChannel.accessToken" class="form-control input-lg" id="access_token" required>
+    <p class="help-block" ng-if="errorMessage">{{errorMessage}}</p>
   </div>
-</div>
+
+  <div class="form-group">
+    <button type="submit" class="btn btn-primary btn-lg btn-block">
+      <i class="fa fa-plus"></i>
+      Activate
+    </button>
+  </div>
+</form>
