--- a/public/pages/flow-collection.html
+++ b/public/pages/flow-collection.html
@@ -1,23 +1,23 @@
 <div class="sidebar__pane">
   <div class="sidebar__pane-content">
     <header class="sidebar__toolbar sidebar__toolbar--header">
-      <a class="sidebar__toolbar-button" ng-click="controller.toggleActiveTab('nodes')" ng-class="{'active' : tab.state === 'nodes'}" title="Nodes">
+      <a class="sidebar__toolbar-button" ng-click="toggleActiveTab('nodes')" ng-class="{'active' : tab.state === 'nodes'}" title="Nodes">
         Nodes
       </a>
 
-      <a class="sidebar__toolbar-button sidebar__toolbar-button--active" ng-click="controller.toggleActiveTab('flows')" ng-class="{'active' : tab.state === 'flows'}" title="Flows">
+      <a class="sidebar__toolbar-button sidebar__toolbar-button--active" ng-click="toggleActiveTab('flows')" ng-class="{'active' : tab.state === 'flows'}" title="Flows">
         Flows
       </a>
 
-      <a class="sidebar__toolbar-button" ng-click="controller.toggleActiveTab('debug')" ng-class="{'active' : tab.state === 'debug'}" title="Debug">
+      <a class="sidebar__toolbar-button" ng-click="toggleActiveTab('debug')" ng-class="{'active' : tab.state === 'debug'}" title="Debug">
         Debug
       </a>
     </header>
 
     <main class="sidebar__pane-body">
-      <node-collection ng-show="tab.state == 'nodes'" />
-      <flow-collection ng-show="tab.state == 'flows'" />
-      <flow-debug-browser ng-show="tab.state == 'debug'" />
+      <node-collection ng-if="tab.state == 'nodes'" />
+      <flow-collection ng-if="tab.state == 'flows'" />
+      <flow-debug-browser ng-if="tab.state == 'debug'" />
     </main>
 
     <footer class="sidebar__toolbar sidebar__toolbar--footer">
