--- a/public/pages/flow-debug-browser.html
+++ b/public/pages/flow-debug-browser.html
@@ -1,36 +1,1 @@
-<div class="sidebar__pane">
-  <div class="sidebar__pane-content">
-    <header class="sidebar__toolbar sidebar__toolbar--header">
-      <a class="sidebar__toolbar-button" ng-click="toggleActiveTab('nodes')" ng-class="{'active' : tab.state === 'nodes'}" title="Nodes">
-        Nodes
-      </a>
-
-      <a class="sidebar__toolbar-button sidebar__toolbar-button--active" ng-click="toggleActiveTab('flows')" ng-class="{'active' : tab.state === 'flows'}" title="Flows">
-        Flows
-      </a>
-
-      <a class="sidebar__toolbar-button" ng-click="toggleActiveTab('debug')" ng-class="{'active' : tab.state === 'debug'}" title="Debug">
-        Debug
-      </a>
-    </header>
-
-    <main class="sidebar__pane-body">
-      <node-collection ng-if="tab.state == 'nodes'" />
-      <flow-collection ng-if="tab.state == 'flows'" />
-      <flow-debug-browser ng-if="tab.state == 'debug'" />
-    </main>
-
-    <footer class="sidebar__toolbar sidebar__toolbar--footer">
-      <button class="sidebar__toolbar-button">
-        <i class="fa fa-th fa-lg"></i>
-      </button>
-
-      <form action="" class="collection-browser__filter-form">
-       <i class="fa fa-search fa-lg collection-browser__filter-icon"></i>
-       <input class="collection-browser__filter-input" type="search" name="Filter" placeholder="Filter...">
-
-      </form>
-    </footer>
-
-  </div>
-</div>
+<h1>Flow Debugger</h1>
