--- a/public/pages/node-collection.html
+++ b/public/pages/node-collection.html
@@ -1,11 +1,11 @@
-<div class="">
+<div>
   <md-tabs>
     <md-tab label="Operators">
       <md-grid-list class="node-grid-list"
         md-cols-sm="2" md-cols-md="4"
-        md-cols-gt-md="6" md-cols-lg="8" md-cols-gt-lg="10"
+        md-cols-gt-md="6" md-cols-lg="6" md-cols-gt-lg="5"
         md-row-height="1:1"
-        md-gutter="4px" md-gutter-gt-sm="2px">
+        md-gutter="1px" md-gutter-gt-sm="1px">
 
         <md-grid-tile
           class="animated-popout"
@@ -25,7 +25,58 @@
         </md-grid-tile>
       </md-grid-list>
     </md-tab>
-    <md-tab label="Configured"><h1>Conf</h1></md-tab>
-    <md-tab label="Available"><h1>Avail</h1></md-tab>
+
+    <md-tab label="Configured">
+      <md-grid-list class="node-grid-list"
+        md-cols-sm="2" md-cols-md="4"
+        md-cols-gt-md="6" md-cols-lg="8" md-cols-gt-lg="10"
+        md-row-height="1:1"
+        md-gutter="4px" md-gutter-gt-sm="2px">
+
+        <md-grid-tile
+          class="animated-popout"
+          md-rowspan="1"
+          md-colspan="1"
+          ng-repeat="flowNodeType in flowNodeTypes | filter: {category : '!operation', type: '!device:flow'}"
+          ng-click="addFlowNodeType(flowNodeType)"
+          data-type="{{flowNodeType.type}}">
+
+          <img class="node-grid-thumbnail"
+              src="{{flowNodeType.logo}}"
+              alt="{{flowNodeType.name || flowNodeType.type}}" />
+
+          <md-grid-tile-footer class="node-grid-title-footer">
+            <p class="node-label">{{flowNodeType.name || flowNodeType.type}}</p>
+          </md-grid-tile-footer>
+        </md-grid-tile>
+      </md-grid-list>
+    </md-tab>
+
+
+    <md-tab label="Available">
+      <md-grid-list class="node-grid-list"
+        md-cols-sm="2" md-cols-md="4"
+        md-cols-gt-md="6" md-cols-lg="8" md-cols-gt-lg="10"
+        md-row-height="1:1"
+        md-gutter="4px" md-gutter-gt-sm="2px">
+
+        <md-grid-tile
+          class="animated-popout"
+          md-rowspan="1"
+          md-colspan="1"
+          ng-repeat="flowNodeType in nodeTypes"
+          ng-click="addFlowNodeType(flowNodeType)"
+          data-type="{{flowNodeType.type}}">
+
+          <img class="node-grid-thumbnail"
+              src="{{flowNodeType.logo}}"
+              alt="{{flowNodeType.name || flowNodeType.type}}" />
+
+          <md-grid-tile-footer class="node-grid-title-footer">
+            <p class="node-label">{{flowNodeType.name || flowNodeType.type}}</p>
+          </md-grid-tile-footer>
+        </md-grid-tile>
+      </md-grid-list>
+    </md-tab>
   </md-tabs>
 </div>
