use new bundle location

--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
             }
         }
     </style>
-    <script src="//cdn.octoblu.com/js/latest/meshblu.bundle.js"></script>
+    <script src="//cdn.octoblu.com/js/meshblu/latest/meshblu.bundle.js"></script>
     <script src="/assets/javascripts/dist/dependencies.js"></script>
     <script src="/assets/javascripts/dist/application.js"></script>
 
