--- a/public/pages/flow.html
+++ b/public/pages/flow.html
@@ -8,13 +8,9 @@
 
 
   <div class="sidebar">
-
-    <flow-inspector flow="activeFlow"></flow-inspector>
-
+    <!-- <flow-inspector flow="activeFlow"></flow-inspector> -->
     <collection-browser></collection-browser>
   </div>
-
-
 
   <style>
     .container-fluid #intercom-container .intercom-launcher {
