--- a/public/pages/flow-collection.html
+++ b/public/pages/flow-collection.html
@@ -1,7 +1,6 @@
-<div class="">
+<div>
   <md-grid-list class="node-grid-list"
-    md-cols-sm="2" md-cols-md="4"
-    md-cols-gt-md="6" md-cols-lg="8" md-cols-gt-lg="10"
+    md-cols="5"
     md-row-height="1:1"
     md-gutter="4px" md-gutter-gt-sm="2px">
 
@@ -9,7 +8,7 @@
       class="animated-popout"
       md-rowspan="1"
       md-colspan="1"
-      ng-repeat="flowNodeType in flowNodeTypes | filter: {type: 'device:flow'}"
+      ng-repeat="flowNodeType in nodes"
       ng-click="addFlowNodeType(flowNodeType)"
       data-type="{{flowNodeType.type}}">
 
@@ -17,9 +16,9 @@
           src="{{flowNodeType.logo}}"
           alt="{{flowNodeType.name || flowNodeType.type}}" />
 
-      <md-grid-tile-footer class="node-grid-title-footer">
-        <p class="node-label">{{flowNodeType.name || flowNodeType.type}}</p>
-      </md-grid-tile-footer>
+    <!--   <md-grid-tile-footer class="node-grid-title-footer">
+      <p class="node-label">{{flowNodeType.name || flowNodeType.type}}</p>
+    </md-grid-tile-footer> -->
     </md-grid-tile>
   </md-grid-list>
 </div>
