--- a/public/pages/flow.html
+++ b/public/pages/flow.html
@@ -8,7 +8,7 @@
 
 
   <div class="sidebar">
-    <!-- <flow-inspector flow="activeFlow"></flow-inspector> -->
+    <flow-inspector flow="activeFlow"></flow-inspector>
     <collection-browser></collection-browser>
   </div>
 
